<resources>
    <string name="app_name">My Application</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="piu">+</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="meno">-</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="per">*</string>
    <string name="vuoto_button">canc</string>
    <string name="zero_button">0</string>
    <string name="uguale">=</string>
    <string name="diviso">/</string>
    <string name="testo">0</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login_error">login error</string>
    <string name="login_succesful">login succesful</string>
    <string name="email_error">email error</string>
    <string name="password_error">password error</string>
    <string name="login_success">login success</string>
    <string name="phone_number">phone number</string>
    <string name="register_success">register success</string>
    <string name="welcome">Welcome</string>
    <string name="milk">Milk</string>
    <string name="price">2,00€</string>
    <string name="bread">Bread</string>
    <string name="tea">Tea</string>
    <string name="price1">1,00€</string>
    <string name="price2">2,50€</string>
    <string name="total">Totale</string>
    <string name="eur">€</string>
    <string name="buy">Buy</string>
</resources>
