<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/header">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:id="@+id/welcome_tv"
            android:onClick="onClick"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/food_rv"
        android:layout_below="@+id/header">

    </android.support.v7.widget.RecyclerView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/total"
          />
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="false"
            android:max="15"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:progress="0"/>
        <Button
            android:onClick="onClick"
            android:id="@+id/buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:enabled="false"
            />
    </LinearLayout>
</RelativeLayout>